--- a/directive/decorator.html
+++ b/directive/decorator.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <template *exist="language == 'zhCN'">
+  <template *exist="language === 'zhCN'">
     <h2>指令 / 指令修饰符</h2>
     <h3 class="question">指令修饰符的作用</h3>
     <div class="answer">
@@ -59,7 +59,7 @@
       </div>
     </div>
   </template>
-  <template *exist="language == 'enUS'">
+  <template *exist="language === 'enUS'">
     <h2>Directive / Decorator</h2>
     <h3 class="question">What is the purpose of directive decorator?</h3>
     <div class="answer">
