--- a/directive/expression.html
+++ b/directive/expression.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <template *exist="language == 'zhCN'">
+  <template *exist="language === 'zhCN'">
     <h2>指令 / 指令表达式</h2>
     <h3 class="question">什么是指令表达式</h3>
     <div class="answer">
@@ -41,7 +41,7 @@
       <div>框架对不同类型的指令表达式的执行结果有不同的处理方式，在后面的章节中我们会分别进行介绍。</div>
     </div>
   </template>
-  <template *exist="language == 'enUS'">
+  <template *exist="language === 'enUS'">
     <h2>Directive / Expression</h2>
     <h3 class="question">What is an expression in a directive?</h3>
     <div class="answer">
