--- a/overview/application.html
+++ b/overview/application.html
@@ -1,6 +1,6 @@
 
 <div class="content">
-  <template *exist="language == 'zhCN'">
+  <template *exist="language === 'zhCN'">
     <h2>概览 / 应用程序</h2>
     <h3 class="question">什么是dagger.js应用程序</h3>
     <div class="answer">
@@ -25,7 +25,7 @@
       <div>这是我们第一次接触指令和作用域的概念，现在不理解上述的工作流程请无需担心。在接下来的章节中，我们会对这些概念分别进行讲解。</div>
     </div>
   </template>
-  <template *exist="language == 'enUS'">
+  <template *exist="language === 'enUS'">
     <h2>Overview / Application</h2>
     <h3 class="question">What is a dagger.js application?</h3>
     <div class="answer">
