--- a/overview/installation.html
+++ b/overview/installation.html
@@ -1,4 +1,4 @@
-<template *exist="language == 'zhCN'">
+<template *exist="language === 'zhCN'">
   <h2>概览 / 安装</h2>
   <div class="content">
     <h3 class="question">版本信息</h3>
@@ -74,7 +74,7 @@
     </div>
   </div>
 </template>
-<template *exist="language == 'enUS'">
+<template *exist="language === 'enUS'">
   <h2>Overview / Installation</h2>
   <div class="content">
     <h3 class="question">Version Information</h3>
