--- a/directive/each.html
+++ b/directive/each.html
@@ -1,6 +1,6 @@
 <h2>${ $['directive.each'] }</h2>
   <div class="content">
-    <template *exist="language == 'zhCN'">
+    <template *exist="language === 'zhCN'">
       <h3 class="question">*each指令的作用</h3>
       <div class="answer">*each指令用于循环渲染具有相同视图模板的数组，对象，或者其他<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Iteration_protocols">可迭代变量</a>。</div>
       <h3 class="question">*each指令的触发顺序</h3>
@@ -39,7 +39,7 @@
         </iframe>
       </div>
     </template>
-    <template *exist="language == 'enUS'">
+    <template *exist="language === 'enUS'">
       <template *each="$['directive.each.sections']">
         <h3 class="question">${ item.question }</h3>
         <div class="answer" *html="item.answer"></div>
