--- a/directive/html.html
+++ b/directive/html.html
@@ -1,6 +1,6 @@
 <h2>${ $['directive.html'] }</h2>
 <div class="content">
-  <template *exist="language == 'zhCN'">
+  <template *exist="language === 'zhCN'">
     <h3 class="question">*html指令的作用</h3>
     <div class="answer">*html指令用于在宿主元素下动态创建子级元素。</div>
     <h3 class="question">*html指令表达式的执行结果</h3>
@@ -21,7 +21,7 @@
       <div>请注意，不要将*html指令用于<a href="module/introduction">模块</a>宿主元素。</div>
     </div>
   </template>
-  <template *exist="language == 'enUS'">
+  <template *exist="language === 'enUS'">
     <template *each="$['directive.html.sections']">
       <h3 class="question">${ item.question }</h3>
       <div class="answer" *html="item.answer"></div>
