--- a/directive/style.html
+++ b/directive/style.html
@@ -1,6 +1,6 @@
 <h2>${ $['directive.style'] }</h2>
 <div class="content">
-  <template *exist="language == 'zhCN'">
+  <template *exist="language === 'zhCN'">
     <h3 class="question">*style指令的作用</h3>
     <div class="answer">*style指令用于绑定宿主元素的style属性。</div>
     <h3 class="question">*style指令表达式的执行结果</h3>
@@ -29,7 +29,7 @@
     <h3 class="question">*style指令与style属性的关系</h3>
     <div class="answer">*style指令表达式的计算结果将与宿主元素的style属性内容融合后作为最终的内联style。</div>
   </template>
-  <template *exist="language == 'enUS'">
+  <template *exist="language === 'enUS'">
     <template *each="$['directive.style.sections']">
       <h3 class="question">${ item.question }</h3>
       <div class="answer" *html="item.answer"></div>
